--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,578 +11,598 @@ font-family: 'Montserrat', sans-serif;
 font-family: 'Poppins', sans-serif;
 font-family: 'Roboto', sans-serif; */
 body {
-    font-family: 'Roboto', 300, sans-serif;
-    font-size: 1rem;
+	font-family: "Roboto", 300, sans-serif;
+	font-size: 1rem;
 }
 
 footer {
-    background-color: #000000;
-    text-align: center;
-    padding: 4%;
-    border-top: solid 4px #ca0000;
+	background-color: #000000;
+	text-align: center;
+	padding: 4%;
+	border-top: solid 4px #ca0000;
 }
 
 /* .btn {
   border-radius: 0;
 } */
-#select-category, #hero-section {
-    padding: 7% 10%;
+#select-category,
+#hero-section {
+	padding: 7% 10%;
 }
 
 #navigation-bar {
-    background-color: #000000;
-    padding: 0 10%;
-    border-bottom: solid 4px #ca0000;
-    ;
+	background-color: #000000;
+	padding: 0 10%;
+	border-bottom: solid 4px #ca0000;
 }
 
 /* header and navigation bar content */
 .navbar {
-    text-align: center;
-    margin-top: 0;
-    padding-top: 0;
-    padding-left: 0;
-    padding-right: 0;
+	text-align: center;
+	margin-top: 0;
+	padding-top: 0;
+	padding-left: 0;
+	padding-right: 0;
 }
 
 .nav-item {
-    padding: 0 1rem;
-    font-family: 'Montserrat', sans-serif;
+	padding: 0 1rem;
+	font-family: "Montserrat", sans-serif;
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    font-size: 1.1rem;
-    color: #fff;
+	font-size: 1.1rem;
+	color: #fff;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
-    color: #aaaaaa;
+	color: #aaaaaa;
 }
 
 .navbar .navbar-brand {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    font-size: 3rem;
-    color: #ca0000;
-    padding: 0;
+	font-family: "Poppins", sans-serif;
+	font-weight: 600;
+	font-size: 3rem;
+	color: #ca0000;
+	padding: 0;
 }
 
 .navbar .navbar-brand:hover {
-    color: #ca0000;
+	color: #ca0000;
 }
 
 /* hero section */
 .hero-section button {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    padding: .5% 2%;
-    margin: 14% 2% 0 0;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 500;
+	padding: 0.5% 2%;
+	margin: 14% 2% 0 0;
 }
 
 .hero-section {
-    background: url('../images/hero-image.jpg') no-repeat center center fixed;
-    -webkit-transform-style: preserve-3d;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    /* background-repeat: no-repeat;
+	background: url("../images/hero-image.jpg") no-repeat center center fixed;
+	-webkit-transform-style: preserve-3d;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	/* background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed; */
-    min-height: 700px;
+	min-height: 700px;
 }
 
-.hero-title, .hero-subtitle {
-    font-family: 'Poppins', sans-serif;
-    text-transform: uppercase;
-    text-shadow: 3px 2px 4px rgba(0, 0, 0, 1);
-    font-weight: 600;
+.hero-title,
+.hero-subtitle {
+	font-family: "Poppins", sans-serif;
+	text-transform: uppercase;
+	text-shadow: 3px 2px 4px rgba(0, 0, 0, 1);
+	font-weight: 600;
 }
 
 .hero-title {
-    font-size: 3.5rem;
-    color: #fff;
-    padding: 5% 0 0 0;
-    margin: 0;
+	font-size: 3.5rem;
+	color: #fff;
+	padding: 5% 0 0 0;
+	margin: 0;
 }
 
 .hero-subtitle {
-    font-size: 2rem;
-    color: #ca0000;
+	font-size: 2rem;
+	color: #ca0000;
 }
 
 .first-button {
-    color: #fff;
-    background-color: #ca0000;
+	color: #fff;
+	background-color: #ca0000;
 }
 
 .first-button:hover {
-    background-color: #fff;
-    color: #000000;
+	background-color: #fff;
+	color: #000000;
 }
 
 .second-button {
-    border-color: #fff;
-    color: #fff;
+	border-color: #fff;
+	color: #fff;
 }
 
 .second-button:hover {
-    background-color: #fff;
-    border-color: #fff;
-    color: #000000;
+	background-color: #fff;
+	border-color: #fff;
+	color: #000000;
 }
 
 /* select category section */
 .category-title {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    text-align: center;
-    padding-bottom: 6%;
+	font-family: "Poppins", sans-serif;
+	font-weight: 600;
+	text-align: center;
+	padding-bottom: 6%;
 }
 
 .category-image {
-    width: 100%;
-    height: 80%;
+	width: 100%;
+	height: 80%;
 }
 
 .category-cards {
-    text-align: center;
-    margin: 2% 0;
+	text-align: center;
+	margin: 2% 0;
 }
 
 .category-cards:hover {
-    border: solid 1px #ca0000;
+	border: solid 1px #ca0000;
 }
 
 .category-link:hover {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .category-name {
-    color: #ca0000;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
+	color: #ca0000;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 500;
 }
 
 /* footer design */
 .social-icons {
-    padding-bottom: 2%;
+	padding-bottom: 2%;
 }
 
 .social-icons a {
-    padding: 0 1% 0 1%;
-    padding: 0 18px 0;
-    color: #fff;
+	padding: 0 1% 0 1%;
+	padding: 0 18px 0;
+	color: #fff;
 }
 
 .social-contacts small {
-    color: #B3B3B3;
+	color: #b3b3b3;
 }
 
 .social-icons .fa-instagram:hover {
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+	background: radial-gradient(
+		circle at 30% 107%,
+		#fdf497 0%,
+		#fdf497 5%,
+		#fd5949 45%,
+		#d6249f 60%,
+		#285aeb 90%
+	);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 .social-icons .fa-twitter:hover {
-    color: #1DA1F2;
+	color: #1da1f2;
 }
 
 .social-icons .fa-facebook-f:hover {
-    color: #4267B2;
+	color: #4267b2;
 }
 
 /* login and some signup page specific css */
 .login-signup-title {
-    font-family: 'Poppins', sans-serif;
-    font-size: 3.5rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    padding: 3% 0 0 0;
-    /* text-align: center; */
+	font-family: "Poppins", sans-serif;
+	font-size: 3.5rem;
+	font-weight: 600;
+	text-transform: uppercase;
+	padding: 3% 0 0 0;
+	/* text-align: center; */
 }
 
 .login-title-specific {
-    margin-left: 10%;
+	margin-left: 10%;
 }
 
 .login-signup-content {
-    background-color: #333333;
-    color: #fff;
-    padding: 3% 10%;
+	background-color: #333333;
+	color: #fff;
+	padding: 3% 10%;
 }
 
 #sign-up {
-    text-align: center;
+	text-align: center;
 }
 
 .forgot-password {
-    cursor: pointer;
-    color: #fff;
+	cursor: pointer;
+	color: #fff;
 }
 
 .forgot-password:hover {
-    color: #ca0000;
-    text-decoration: none;
+	color: #ca0000;
+	text-decoration: none;
 }
 
 .login-button {
-    font-size: 1rem;
-    padding: 8px 5%;
-    display: block;
-    margin: 0 auto;
-    text-transform: uppercase;
+	font-size: 1rem;
+	padding: 8px 5%;
+	display: block;
+	margin: 0 auto;
+	text-transform: uppercase;
 }
 
 .create-account {
-    background-color: #000;
-    text-align: center;
-    padding: 5%;
-    margin: auto;
+	background-color: #000;
+	text-align: center;
+	padding: 5%;
+	margin: auto;
 }
 
 .create-account-button {
-    margin-top: 6%;
+	margin-top: 6%;
 }
 
 @media (max-width: 992px) {
-    .login-button {
-        margin-bottom: 7%;
-    }
+	.login-button {
+		margin-bottom: 7%;
+	}
 }
 
 /* signup page specific css */
 .signup-title-specific {
-    text-align: center;
+	text-align: center;
 }
 
 .signup-content {
-    padding: 0 25%;
+	padding: 0 25%;
 }
 
 .signup-button {
-    font-size: 1rem;
-    padding: 8px 5%;
-    display: block;
-    margin: 35px auto 15px;
-    text-transform: uppercase;
+	font-size: 1rem;
+	padding: 8px 5%;
+	display: block;
+	margin: 35px auto 15px;
+	text-transform: uppercase;
 }
 
 .back-to-login {
-    color: #fff;
-    display: block;
-    text-align: center;
+	color: #fff;
+	display: block;
+	text-align: center;
 }
 
 .back-to-login:hover {
-    color: #ca0000;
-    text-decoration: none;
+	color: #ca0000;
+	text-decoration: none;
 }
 
 /* sell car page css */
 .sell-car-form {
-    padding: 6% 25%;
-    background-color: #333333;
-    color: #fff;
+	padding: 6% 25%;
+	background-color: #333333;
+	color: #fff;
 }
 
 @media (min-width: 100px) and (max-width: 1200px) {
-    .sell-car-form {
-        padding: 6% 2%;
-    }
+	.sell-car-form {
+		padding: 6% 2%;
+	}
 
-    #navigation-bar {
-        padding: 0 2%;
-    }
+	#navigation-bar {
+		padding: 0 2%;
+	}
 }
 
-.sell-car-form label, .sell-car-submit {
-    font-family: 'Roboto', sans-serif;
+.sell-car-form label,
+.sell-car-submit {
+	font-family: "Roboto", sans-serif;
 }
 
-.sell-car-title, .sell-car-info {
-    margin-bottom: 5%;
+.sell-car-title,
+.sell-car-info {
+	margin-bottom: 5%;
 }
 
-.sell-car-title h1, .sell-car-info h3 {
-    padding-bottom: 4%;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
+.sell-car-title h1,
+.sell-car-info h3 {
+	padding-bottom: 4%;
+	font-family: "Poppins", sans-serif;
+	font-weight: 700;
 }
 
 .sell-car-info h3 {
-    display: inline-block;
-    padding-left: 2%;
+	display: inline-block;
+	padding-left: 2%;
 }
 
 .sell-car-info {
-    padding: 4%;
-    background-color: #000;
-    border-radius: 0.5rem;
+	padding: 4%;
+	background-color: #000;
+	border-radius: 0.5rem;
 }
 
 .span-decor {
-    display: inline-block;
-    width: 0.75rem;
-    height: 1.125rem;
-    background: #ca0000;
-    border-radius: 0 4px 4px 0;
+	display: inline-block;
+	width: 0.75rem;
+	height: 1.125rem;
+	background: #ca0000;
+	border-radius: 0 4px 4px 0;
 }
 
 .sell-car-submit {
-    font-size: 1.1rem;
-    padding: 8px 5%;
-    background: #ca0000;
-    border: none;
-    text-transform: uppercase;
+	font-size: 1.1rem;
+	padding: 8px 5%;
+	background: #ca0000;
+	border: none;
+	text-transform: uppercase;
 }
 
 .sell-car-submit:hover {
-    background: #fff;
-    color: #000;
+	background: #fff;
+	color: #000;
 }
 
 /* upload photos section */
 
 .drop-photo-cols {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .drop-zone {
-    max-width: 12.5rem;
-    height: 9.375rem;
-    padding: 0.625;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 1rem;
-    cursor: pointer;
-    color: #cccccc;
-    border: 4px dashed #ca0000;
-    border-radius: 10px;
+	max-width: 12.5rem;
+	height: 9.375rem;
+	padding: 0.625;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	font-size: 1rem;
+	cursor: pointer;
+	color: #cccccc;
+	border: 4px dashed #ca0000;
+	border-radius: 10px;
 }
 
 .drop-zone--over {
-    border-style: solid;
+	border-style: solid;
 }
 
 .drop-zone__input {
-    display: none;
+	display: none;
 }
 
 .drop-zone__thumb {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    overflow: hidden;
-    background-color: #ccc;
-    background-size: cover;
-    position: relative;
+	width: 100%;
+	height: 100%;
+	border-radius: 10px;
+	overflow: hidden;
+	background-color: #ccc;
+	background-size: cover;
+	position: relative;
 }
 
 .drop-zone__thumb::after {
-    content: attr(data-label);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 5px 0;
-    color: #fff;
-    background: rgba(0, 0, 0, 0.75);
-    font-size: 0.875rem;
-    text-align: center;
+	content: attr(data-label);
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	padding: 5px 0;
+	color: #fff;
+	background: rgba(0, 0, 0, 0.75);
+	font-size: 0.875rem;
+	text-align: center;
 }
 
 /* vehicle details section */
 /* CAUTION: DO NOT CHANGE ANYTHING HERE( NO MATTER WHAT(ESPECIALLY RIDHUN)) */
-.vehicle-name, .table-section, .image-preview {
-  background-color: #222;
-  color: #fff;
+.vehicle-name,
+.table-section,
+.image-preview {
+	background-color: #222;
+	color: #fff;
 }
 .table-section {
-  padding: 5% 20%;
+	padding: 5% 20%;
 }
 .h3-price {
-  margin-bottom: 3%;
+	margin-bottom: 3%;
 }
 
-table, .detials-highlights {
-  margin-bottom: 5%;
+table,
+.detials-highlights {
+	margin-bottom: 5%;
 }
 table {
-  border: 1px solid #fff;
+	border: 1px solid #fff;
 }
 th {
-  width: 37.5rem;
-  background-color: #000;
+	width: 37.5rem;
+	background-color: #000;
 }
 td {
-  width: 50rem;
+	width: 50rem;
 }
-th, td {
-    font-family: 'Poppins', sans-serif;
-}
-
-th,td {
-  border-bottom: 1px solid #fff;
-  padding: 0.5rem 1rem;
+th,
+td {
+	font-family: "Poppins", sans-serif;
 }
 
-.contact-button, .remove-ad-button button {
-  font-size: 1.1rem;
-  padding: 8px 5%;
-  background: #ca0000;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  text-transform: uppercase;
+th,
+td {
+	border-bottom: 1px solid #fff;
+	padding: 0.5rem 1rem;
 }
 
-.contact-button:hover, .remove-ad-button button:hover {
-  background: #fff;
-  color: #000;
+.contact-button,
+.remove-ad-button button {
+	font-size: 1.1rem;
+	padding: 8px 5%;
+	background: #ca0000;
+	color: #fff;
+	border: none;
+	border-radius: 5px;
+	text-transform: uppercase;
 }
 
+.contact-button:hover,
+.remove-ad-button button:hover {
+	background: #fff;
+	color: #000;
+}
 
 .image-preview {
-  margin: 0;
-  padding: 0 5%;
-  align-items: center;
+	margin: 0;
+	padding: 0 5%;
+	align-items: center;
 }
 
 .image-preview img {
-  width: 100%;
+	width: 100%;
 }
 .image-selection-col {
-  padding: 10px;
+	padding: 10px;
 }
 
-
 .image-selection-col img {
-  width: 100%;
-  opacity: 0.8;
-  cursor: pointer;
+	width: 100%;
+	opacity: 0.8;
+	cursor: pointer;
 }
 
 .image-selection-col img:hover {
-  opacity: 1;
+	opacity: 1;
 }
 
-
 .image-selection-row:after {
-  content: "";
-  display: table;
-  clear: both;
+	content: "";
+	display: table;
+	clear: both;
 }
 
 .col-col {
-  padding: 5% 0;
+	padding: 5% 0;
 }
 .vehicle-name {
-  padding: 1% 5%;
+	padding: 1% 5%;
 }
-.vehicle-name h2, .table-section h3 {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 600;
+.vehicle-name h2,
+.table-section h3 {
+	font-family: "Poppins", sans-serif;
+	font-weight: 600;
 }
 
 /* Buy Car Page CSS */
 .buy-car-title {
-  font-family: 'Poppins', sans-serif;
-  font-size: 3.5rem;
-  font-weight: 600;
-  margin-left: 10%;
-  padding: 3% 0 0 0;
-  text-transform: uppercase;
+	font-family: "Poppins", sans-serif;
+	font-size: 3.5rem;
+	font-weight: 600;
+	margin-left: 10%;
+	padding: 3% 0 0 0;
+	text-transform: uppercase;
 }
 
 .buy-car-section {
-  background-color: #333333;
-  padding: 1px; /* to account for margin collapsing due to child margin */
+	background-color: #333333;
+	padding: 1px; /* to account for margin collapsing due to child margin */
 }
 
 .buy-car-row {
-  margin: 40px 10%;
+	margin: 40px 10%;
 }
 
 .buy-car-a {
-  /* border: 2px #fff solid; */
-  margin: 20px auto;
+	/* border: 2px #fff solid; */
+	margin: 20px auto;
 }
 
 .buy-car-a:hover {
-  text-decoration: none;
-  border: 2px #ca0000 solid;
+	text-decoration: none;
+	border: 2px #ca0000 solid;
 }
 
 .buy-car-col {
-  background-color: #000;
-  max-width: 300px;
-  padding: 20px;
+	background-color: #000;
+	max-width: 300px;
+	padding: 20px;
 }
 
 .buy-car-img {
-  height: 200px;
-  width: auto;
-  max-width: 100%;
+	height: 200px;
+	width: auto;
+	max-width: 100%;
 }
 
 .buy-car-name {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 500;
-  margin: 5px 0 0;
-  color: #fff;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 500;
+	margin: 5px 0 0;
+	color: #fff;
 }
 
 /* remove ads page */
 .remove-ad-section {
-  background: #222;
-  min-height: 500px;
-  color: #fff;
-  padding: 5% 10%;
+	background: #222;
+	min-height: 500px;
+	color: #fff;
+	padding: 5% 10%;
 }
 
 .remove-ad {
-  background: #000;
-  border-radius: 10px;
-  padding: 1% 1%;
-  margin-bottom: 3%;
+	background: #000;
+	border-radius: 10px;
+	padding: 1% 1%;
+	margin-bottom: 3%;
 }
 
 .remove-car-picture img {
-  border-radius: 10px;
-  width: 70%;
+	border-radius: 10px;
+	width: 70%;
 }
 
 .remove-car-details {
-  padding-top: 4%;
+	padding-top: 4%;
 }
 
 .remove-ad-button {
-  padding-top: 4%;
+	padding-top: 4%;
 }
 
 .remove-ad-button button {
-  margin-left: 55%;
+	margin-left: 55%;
 }
 
 @media only screen and (max-width: 1000px) {
-  .remove-ad-section {
-    min-height: 125rem;
-  }
-  .remove-car-picture img {
-    position: relative;
-    left: 28%;
-    width: 40%;
-  }
-  .remove-car-details {
-    text-align: center;
-  }
-  .remove-ad-button {
-    padding: 0;
-    position: relative;
-    right: 15%;
-  }
+	.remove-ad-section {
+		min-height: 125rem;
+	}
+	.remove-car-picture img {
+		position: relative;
+		left: 28%;
+		width: 40%;
+	}
+	.remove-car-details {
+		text-align: center;
+	}
+	.remove-ad-button {
+		padding: 0;
+		position: relative;
+		right: 15%;
+	}
+}
+/* Card */
+.card {
+	border: 5px solid black;
 }
