--- a/views/buy_car.ejs
+++ b/views/buy_car.ejs
@@ -3,17 +3,16 @@
   <section class="buy-car-section">
     <div class="row buy-car-row">
       <%for(var i=0; i<post.length; i++){  %>
-        <div class="card   bg-dark border-light mb-3" style="width: 16rem;">
+        <div class="card mb-3" style="width: 16rem;">
           <img class="card-img-top" src="images/car7.jpg" alt="Card image cap">
           <div class="card-body ">
-            <h2 class="card-title text-light"><%=post[i].model%></h2>
-            <h5 class="card-text text-light">Model Year: <%=post[i].model_year%> Mileage: <%=post[i].milage%> KM</h5>
-            <h5 class="card-text text-light">Price : <span style="color:green">$ <%=post[i].price%></span> </h5>
-            <a href="/<%=post[i].model%>" class="btn btn-primary  btn-danger">View</a>
+            <h2 class="card-title text-light"><%=post[i].model_year%> <%=post[i].model%></h2>
+            <h5 class="card-text text-light">Price : <span>$ <%=post[i].price%></span> </h5>
+            <a href="/<%=post[i].model%>" class="btn card-view-button">View</a>
           </div>
-        </div>   
+        </div>
       <%}%>
-        
+
     </div>
   </section>
 <%- include('footer'); %>
