--- a/views/header.ejs
+++ b/views/header.ejs
@@ -27,11 +27,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 
   <!-- Custom JS -->
-  <script src="js/sell_car.js" charset="utf-8" async></script>
-  <script src="js/detail_view.js" charset="utf-8" async></script>
+  <script src="/js/sell_car.js" charset="utf-8" async></script>
+  <script src="/js/detail_view.js" charset="utf-8" async></script>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="/buy_car" class="nav-link">Buy</a>
+              <a href="/buy_car/all" class="nav-link">Buy</a>
             </li>
             <li class="nav-item">
               <a href="/sell_car" class="nav-link">Sell</a>
