--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,8 +4,9 @@
      <div class="container-fluid">
        <h1 class="hero-title animate__animated animate__fadeInDownBig">arcu dictum varius duis at.</h1>
        <h3 class="hero-subtitle animate__animated animate__fadeInLeft animate__delay-0.5s">netus et malesuada</h3>
-
-       <button type="button" name="button" class="btn btn-lg first-button animate__animated animate__fadeIn animate__delay-1s">BUY</button>
+       <a href="/buy_car/all">
+          <button type="button" name="button" class="btn btn-lg first-button animate__animated animate__fadeIn animate__delay-1s">BUY</button>
+       </a>
        <a href="/sell_car">
             <button type="button" name="button" class="btn btn-lg second-button animate__animated animate__fadeIn animate__delay-1s" >Sell</button>
        </a>
@@ -18,37 +19,37 @@
     <h1 class="category-title">Select a Category</h1>
     <div class="row">
       <div class="col-lg-4 col-md-6 category-cards">
-        <a href="#" class="category-link">
+        <a href="/buy_car/Coupe" class="category-link">
           <img src="images/coupe.jpg" alt="coupe" class="category-image">
           <h5 class="category-name">Coupe</h5>
         </a>
       </div>
       <div class="col-lg-4 col-md-6  category-cards">
-        <a href="#" class="category-link">
+        <a href="/buy_car/Convertible" class="category-link">
           <img src="images/convertible.jpg" alt="coupe" class="category-image">
           <h5 class="category-name">Convertible</h5>
         </a>
       </div>
       <div class="col-lg-4 col-md-6 category-cards">
-        <a href="#" class="category-link">
+        <a href="/buy_car/Hatchback" class="category-link">
           <img src="images/hatchback.jpg" alt="coupe" class="category-image">
           <h5 class="category-name">Hothatch</h5>
         </a>
       </div>
       <div class="col-lg-4 col-md-6  category-cards">
-        <a href="#" class="category-link">
+        <a href="/buy_car/Sedan" class="category-link">
           <img src="images/sedan.jpg" alt="coupe" class="category-image">
           <h5 class="category-name">Sedan</h5>
         </a>
       </div>
       <div class="col-lg-4 col-md-6  category-cards">
-        <a href="#" class="category-link">
+        <a href="/buy_car/Station Wagon" class="category-link">
           <img src="images/station wagon.jpg" alt="coupe" class="category-image">
           <h5 class="category-name">Station Wagon</h5>
         </a>
       </div>
       <div class="col-lg-4 col-md-6  category-cards">
-        <a href="#" class="category-link">
+        <a href="/buy_car/Suv" class="category-link">
           <img src="images/suv.jpg" alt="coupe" class="category-image">
           <h5 class="category-name">SUV</h5>
         </a>
