--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -499,11 +499,53 @@ td {
 	padding: 1% 5%;
 }
 .vehicle-name h2,
-.table-section h3 {
+.table-section h3,
+.popup-header,
+.popup-content h5 {
 	font-family: "Poppins", sans-serif;
 	font-weight: 600;
 }
 
+.popup-overlay {
+  position:fixed;
+  top:0px;
+  left:0px;
+  width:100%;
+  height:100vh;
+  z-index:1;
+  background:rgba(0,0,0,0.5);
+  display:none;
+}
+.popup {
+  position:absolute;
+  top:-150%;
+  left:50%;
+  transform:translate(-50%,-50%) scale(1.15);
+  width: 31.25rem;
+  height: 45%;
+  background:#000;
+  padding: 2%;
+  z-index:2;
+  opacity:0;
+  border-bottom: solid 4px #ca0000;
+  box-shadow:5px 5px 3px rgba(0,0,0,0);
+  transition:transform 300ms ease-in-out,opacity 300ms ease-in-out;
+}
+
+ .popup-header {
+  text-align:center;
+  font-size:2.5rem;
+  margin:5% 0 7%;;
+}
+
+body.showLoginForm .popup-overlay {
+  display:block;
+}
+body.showLoginForm .popup {
+  top:50%;
+  opacity:1;
+  transform:translate(-50%,-50%) scale(1);
+}
 /* Buy Car Page CSS */
 .buy-car-title {
 	font-family: "Poppins", sans-serif;
