--- a/views/main.ejs
+++ b/views/main.ejs
@@ -49,7 +49,7 @@
         </a>
       </div>
       <div class="col-lg-4 col-md-6  category-cards">
-        <a href="/buy_car/Suv" class="category-link">
+        <a href="/buy_car/SUV" class="category-link">
           <img src="images/suv.jpg" alt="coupe" class="category-image">
           <h5 class="category-name">SUV</h5>
         </a>
