--- a/views/buy_car.ejs
+++ b/views/buy_car.ejs
@@ -1,17 +1,25 @@
 <%- include('header'); %>
   <h1 class="buy-car-title">Cars for Sale</h1>
   <section class="buy-car-section">
-    <div class="row buy-car-row card-deck">
-      <%for(var i=0; i<post.length; i++){  %>
-        <div class="card mb-3" style="width: 16rem;">
-          <img class="card-img-top" src="/images/car7.jpg" alt="Card image cap">
+    <%var i=0%>
+    <%for(var j=0; j<Math.ceil(post.length/2); j++){  %>
+    <div class="row buy-car-row card-deck ">
+      <%for(var k=0; (k<2 && i<post.length);( i++,k++)){  %>
+        <div class="card mb-3 " style="width: 16rem;">
+          <img class="card-img-top" src="<%=post[i].img.img1%>" alt="Card image cap">
           <div class="card-body ">
-            <h2 class="card-title text-light"><%=post[i].model%> <%=post[i].model_year%></h2>
-            <h5 class="card-text text-light">$ <%=post[i].price%> </h5>
-            <a href="/detail_view/<%=post[i]._id%>" >View</a>
+            <h2 class="card-title text-light"><%=post[i].car.model%></h2>
+            <h5 class="card-text text-light"><%=post[i].car.make%> </h5>
+            <h5 class="card-title text-light"> <%=post[i].car.model_year%></h5>
+            <p class="card-text text-light">$ <%=post[i].car.price%></p>
+            <a href="/detail_view/<%=post[i].car._id%>" >
+              <button type="button" class="btn btn-danger">View</button>
+            </a>
           </div>
         </div>
-      <%}%>
+        <%}%>
     </div>
+    <%}%>
   </section>
+  
 <%- include('footer'); %>
