--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -507,58 +507,59 @@ td {
 }
 
 .popup-overlay {
-  position:fixed;
-  top:0px;
-  left:0px;
-  width:100%;
-  height:100vh;
-  z-index:1;
-  background:rgba(0,0,0,0.5);
-  display:none;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100vh;
+	z-index: 1;
+	background: rgba(0, 0, 0, 0.5);
+	display: none;
 }
 .popup {
-  position:absolute;
-  top:-150%;
-  left:50%;
-  transform:translate(-50%,-50%) scale(1.15);
-  width: 31.25rem;
-  height: 45%;
-  background:#000;
-  padding: 2%;
-  z-index:2;
-  opacity:0;
-  border-bottom: solid 4px #ca0000;
-  box-shadow:5px 5px 3px rgba(0,0,0,0);
-  transition:transform 300ms ease-in-out,opacity 300ms ease-in-out;
+	position: absolute;
+	top: -150%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(1.15);
+	width: 31.25rem;
+	height: 45%;
+	background: #000;
+	padding: 2%;
+	z-index: 2;
+	opacity: 0;
+	border-bottom: solid 4px #ca0000;
+	box-shadow: 5px 5px 3px rgba(0, 0, 0, 0);
+	transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
 }
 
- .popup-header {
-  text-align:center;
-  font-size:2.5rem;
-  margin:5% 0 7%;;
+.popup-header {
+	text-align: center;
+	font-size: 2.5rem;
+	margin: 5% 0 7%;
 }
 
 body.showLoginForm .popup-overlay {
-  display:block;
+	display: block;
 }
 body.showLoginForm .popup {
-  top:50%;
-  opacity:1;
-  transform:translate(-50%,-50%) scale(1);
+	top: 50%;
+	opacity: 1;
+	transform: translate(-50%, -50%) scale(1);
 }
 /* Buy Car Page CSS */
 .buy-car-title {
 	font-family: "Poppins", sans-serif;
 	font-size: 3.5rem;
 	font-weight: 600;
-	margin-left: 10%;
+	/* margin-left: 10%;*/
 	padding: 3% 0 0 0;
 	text-transform: uppercase;
+	text-align: center;
 }
 
 .buy-car-section {
 	background-color: #222;
-	padding: 1px; /* to account for margin collapsing due to child margin */
+	padding: 1px;
 }
 
 .buy-car-row {
@@ -648,6 +649,7 @@ body.showLoginForm .popup {
 .card {
 	border: 0 0 1px 0 solid #ca0000;
 	background: #000;
+	border: 1px solid black;
 }
 .card-view-button button {
 	font-size: 1.1rem;
@@ -660,4 +662,10 @@ body.showLoginForm .popup {
 .card-view-card button:hover {
 	background: #fff;
 	color: #000;
+}
+
+.card-img-top {
+	width: 100%;
+	height: 15vw;
+	object-fit: cover;
 }
