--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,7 +7,7 @@
   <title>Apex</title>
 
   <!-- favicon -->
-  <link rel="icon" href="icon/apex-fav.ico">
+  <link rel="icon" href="/icon/apex-fav.ico">
 
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/769ee1c5eb.js" crossorigin="anonymous"></script>
