--- a/views/buy_car.ejs
+++ b/views/buy_car.ejs
@@ -5,24 +5,25 @@
       <div class="row">
 
       <%for(var i=0; i<post.length; i++){%>
-          <div class="col-lg-3 col-md-6 col-sm-12 mb-4 ">
-              <div class="card ">
-              <img src="<%=post[i].img.img1%>" class="card-img-top" style="max-height:500px;"alt="images">
-              <div class="card-body">
-                  <h6 class="card-title text-light"><%=post[i].car.model%></h6>
-                  <h7 class="card-text text-light"><%=post[i].car.make%></h7></br>
-                  <h7 class="card-title text-light"><%=post[i].car.model_year%></h7></br></br>
-                  
-                  <p class="card-text text-light">$ <%=post[i].car.price%></p>
-              </div>
-              <div class="card-footer">
-                <a href="/detail_view/<%=post[i].car._id%>" >
-                  <button type="button" class="btn btn-danger">View</button>
-                </a>
-              </div>
-              </div>
-          </div> 
-        
+        <%if(typeof post[i].img != 'undefined'){%>
+              <div class="col-lg-3 col-md-6 col-sm-12 mb-4 ">
+                  <div class="card ">
+                  <img src="<%=post[i].img.img1%>" class="card-img-top" style="max-height:500px;"alt="images">
+                  <div class="card-body">
+                      <h6 class="card-title text-light"><%=post[i].car.model%></h6>
+                      <h7 class="card-text text-light"><%=post[i].car.make%></h7></br>
+                      <h7 class="card-title text-light"><%=post[i].car.model_year%></h7></br></br>
+                      
+                      <p class="card-text text-light">$ <%=post[i].car.price%></p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="/detail_view/<%=post[i].car._id%>" >
+                      <button type="button" class="btn btn-danger">View</button>
+                    </a>
+                  </div>
+                  </div>
+              </div> 
+          <%}%>
         <%}%>
 
       </div>
