small css modifications

--- a/views/buy_car.ejs
+++ b/views/buy_car.ejs
@@ -7,7 +7,7 @@
       <%for(var i=0; i<post.length; i++){%>
         <%if(typeof post[i].img != 'undefined'){%>
               <div class="col-lg-3 col-md-6 col-sm-12 mb-4 ">
-                  <div class="card ">
+                  <div class="card card-decor">
                   <img src="<%=post[i].img.img1%>" class="card-img-top" style="max-height:500px;"alt="images">
                   <div class="card-body">
                       <h6 class="card-title text-light"><%=post[i].car.model%></h6>
