--- a/views/detail_view.ejs
+++ b/views/detail_view.ejs
@@ -86,36 +86,38 @@
     <h3>Highlights</h3>
     <p><%=carInfo.car.feature%></p>
   </div>
-  <div class="details-button ">
-    <div class="center">
-        <button type="button" name="button" class="contact-button" onclick="openContact()">Contact Seller</button>
-    </div>
-    <div class="popup-overlay" onclick="closeContact()"></div>
-  <div class="popup">
-    <div class="popup-header">
-      Seller Details
-    </div>
-    <div class="popup-content">
-      <h5>Name: <%=carInfo.userInfo.name%></h5>
-      <div class="row">
-        <div class="col-lg-6">
-          <h5>State: <%=carInfo.userInfo.state%></h5>
+  <% if(isAuth){%>
+      <div class="details-button ">
+        <div class="center">
+            <button type="button" name="button" class="contact-button" onclick="openContact()">Contact Seller</button>
         </div>
-        <div class="col-lg-6">
-          <h5>City: <%=carInfo.userInfo.city%></h5>
+        <div class="popup-overlay" onclick="closeContact()"></div>
+        <div class="popup">
+          <div class="popup-header">
+            Seller Details
+          </div>
+          <div class="popup-content">
+            <h5>Name: <%=carInfo.userInfo.name%></h5>
+            <div class="row">
+              <div class="col-lg-6">
+                <h5>State: <%=carInfo.userInfo.state%></h5>
+              </div>
+              <div class="col-lg-6">
+                <h5>City: <%=carInfo.userInfo.city%></h5>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-6">
+                <h5>Zip Code: <%=carInfo.userInfo.zipcode%></h5>
+              </div>
+              <div class="col-lg-6">
+                <h5>Phone: <%=carInfo.userInfo.phone%></h5>
+              </div>
+            </div>
+            <h5>Email: <%=carInfo.userInfo.email%></h5>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <h5>Zip Code: <%=carInfo.userInfo.zipcode%></h5>
-        </div>
-        <div class="col-lg-6">
-          <h5>Phone: <%=carInfo.userInfo.phone%></h5>
-        </div>
-      </div>
-      <h5>Email: <%=carInfo.userInfo.email%></h5>
-    </div>
-  </div>
-  </div>
+    <% } %>
 </section>
 <%- include('footer'); %>
